--- a/setup/docker-secret.yaml
+++ b/setup/docker-secret.yaml
@@ -6,5 +6,5 @@ metadata:
     build.knative.dev/docker-0: https://index.docker.io/v1/
 type: kubernetes.io/basic-auth
 data:
-  username: xxx # base64 encoded Docker Hub username
-  password: yyy # base64 encoded Docker Hub password
+  username: bXVrZXNoOTA5Mg== # base64 encoded Docker Hub username
+  password: TXVrZXNoOTA5MjY= # base64 encoded Docker Hub password
